--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@ h1, h2, h3, h4, h5, h6 {
   <p>WE <a href="/ashish.html" title="aditya.html" target="_blank" class="w3-hover-text-green">ARE</a></p>
   <p>GIT <a href="https://github.com/Mittalagarwalashish/aditya.git" title="aditya.html" target="_blank" class="w3-hover-text-green">LINK</a></p>
   <p>Linkedin <a href="https://www.linkedin.com/in/ashish-agrawal-1176b4178/" title="aditya.html" target="_blank" class="w3-hover-text-green">LINK</a></p>
-   <p>MITTAL <a href="/a.html" title="MITTAL BAND" target="_blank" class="w3-hover-text-green">BAND</a></p>
-  <p>MITTAL <a href="http://52.66.243.15:8078/" title="MITTAL CAFE" target="_blank" class="w3-hover-text-green">CAFE</a></p>
-  <p>MITTAL <a href="http://52.66.243.15:8071/" title="MITTAL GARMENTS" target="_blank" class="w3-hover-text-green">GARMENTS</a></p>
-  <p>MITTAL HOTEL <a href="http://52.66.243.15:8097/" title="MITTAL HOTEL" target="_blank" class="w3-hover-text-green">GROUP</a></p>
-  <p>MITTAL INTIRIOUR <a href="http://52.66.243.15:8063/" title="MITTAL INTIRIOUR DSIGN" target="_blank" class="w3-hover-text-green">DESIGNERS</a></p>
+   <p>MITTAL <a href="/band.html" title="MITTAL BAND" target="_blank" class="w3-hover-text-green">BAND</a></p>
+  <p>MITTAL <a href="/cafe.html" title="MITTAL CAFE" target="_blank" class="w3-hover-text-green">CAFE</a></p>
+  <p>MITTAL <a href="garments.html" title="MITTAL GARMENTS" target="_blank" class="w3-hover-text-green">GARMENTS</a></p>
+  <p>MITTAL HOTEL <a href="/hotel.html" title="MITTAL HOTEL" target="_blank" class="w3-hover-text-green">GROUP</a></p>
+  <p>MITTAL INTIRIOUR <a href="/int.html" title="MITTAL INTIRIOUR DSIGN" target="_blank" class="w3-hover-text-green">DESIGNERS</a></p>
   
 </footer>
 
