--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ h1, h2, h3, h4, h5, h6 {
       </div>
       <div class="w3-container">
         <img src="/IMG-20210216-WA0133.jpg" style="width:100%">
-        <p> mahaveer prasad agarwal<br><b>experience 9 years</b></p>
+        <p><a href="/veer.html" title="MITTAL BAND" target="_blank" class="w3-hover-text-green">mahaveer prasad agarwal</a></p>
       </div>
     </div>
 
