--- a/payal.html
+++ b/payal.html
@@ -1,1 +1,7 @@
-hii, my name is payal agarwal
+<html>
+<head>
+<title>mittal catering</title>
+</head>
+<body style="background-color:grey;">
+	<marquee>payal agarwal...........</marquee>
+</body>
