--- a/veer.html
+++ b/veer.html
@@ -1,1 +1,7 @@
-hii, my name is mahaveer prasad agarwal
+<html>
+<head>
+<title>mittal catering</title>
+</head>
+<body style="background-color:grey;">
+	<marquee>mahaveer prasad agarwal...........</marquee>
+</body>
