--- a/sanwara.html
+++ b/sanwara.html
@@ -1,1 +1,7 @@
-hii, my name is sanwar mal agarwal
+<html>
+<head>
+<title>mittal catering</title>
+</head>
+<body style="background-color:grey;">
+	<marquee>sanwar mal agarwal...........</marquee>
+</body>
